<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">智慧农机</string>
    <string name="app_name1">智慧农机</string>
    <string name="action_settings">Settings</string>

    <string name="edittext">输入搜索距离</string>
    <string name="editBtn">搜索</string>
    <string name="title_activity_bndguide">BNDGuideActivity</string>
    <string name="title_activity_diao_pei">DiaoPeiActivity</string>
    <string name="title_activity_baidudthud">BaidudthudActivity</string>
<string name="item_editor_machine">编辑页面</string>

    <string name="err_cropCheck">请选择作物类型或者耕地类型</string>
    <string name="serverObject_err_phone">手机号格式不正确</string>
    <string name="err_weixin">请输入正确的微信号</string>
    <string name="err_qq">请输入正确的QQ号</string>
    <string name="err_name">请输入正确的姓名</string>
    <string name="err_name2">姓名不能为空</string>
    <string name="err_phone">请输入11位手机号</string>
    <string name="err_phone2">手机号不能为空</string>
    <string name="err_machine_id">请输入正确的农机编号</string>
    <string name="err_machine_id_2">农机编号不能为空</string>
    <string name="err_verification_code">请输入正确的验证码！</string>
    <string name="err_verification_code2">验证码不能为空</string>
    <string name="error_machineId">请输入正确的农机编号</string>
    <string name="error_machineId2">农机编号不能为空</string>
    <string name="error_machineId3">请选择农机类型</string>
    <string name="error_machineId4">请选择农机数量</string>
    <string name="error_machineId5">请输入农机类型</string>
    <string name="error_machineId6">请输入农机数量</string>
    <string name="error_machineId7">请选择作业时长</string>
    <string name="err_password">密码应该以大写字母开头，长度在6~16之间，只能包含字母、数字和下划线！</string>
    <string name="err_password2">密码不能为空</string>
    <string name="register_success">注册成功！</string>
    <string name="err_id_card">请输入15-18位的身份证号！</string>
    <string name="err_id_card2">身份证号不能为空</string>
    <string name="vertify_hint">请确保手机号正确，未欠费，能正常接收短信</string>
    <string name="vertify_error1">输入的手机号错误</string>
    <string name="vertify_error2">连接服务器错误</string>
    <string name="register_error1">注册失败,连接服务器错误，请重试！</string>
    <string name="register_error2">连接服务器错误，请重试！</string>
    <string name="register_error3">头像上传失败，请重试！</string>
    <string name="register_error4">注册信息不匹配，请检查注册信息！</string>
    <string name="login_error">登录失败,连接服务器错误</string>
    <string name="net_error">网络连接错误</string>
    <string name="exit_notice">再按一次退出智慧农机，退出后，您将无法享受智慧农机平台提供的优质服务</string>
    <string name="connect_service_key_err1">密钥失效</string>
    <string name="connect_service_key_err2">密钥失效，请重新登录</string>
    <string name="connect_error">连接服务器错误</string>
    <string name="connect_service_err1">Json error1：response返回的数据错误</string>
    <string name="connect_service_err2">Json error2：response数据解析错误</string>
    <string name="connect_service_err3">服务器连接失败</string>
    <string name="user_image_err">获取图片失败</string>
    <string name="user_image_success">获取图片成功</string>
    <string name="verify_code_err">获取验证码失败，请重试</string>

    <string name="jobStart">开始日期：</string>
    <string name="jobEnd">结束日期：</string>
    <string name="jobStart1">开始：</string>
    <string name="jobEnd1">结束：</string>
    <string name="jobStart2">作业开始：</string>
    <string name="jobEnd2">作业结束：</string>
    <string name="jobStart3">作业开始日期：</string>
    <string name="jobEnd3">作业结束日期：</string>

    <string name="item_1">我的发布</string>
    <string name="item_2">去哪儿好</string>
    <string name="item_3">查询需求</string>
    <string name="item_4">服务对象</string>
    <string name="item_5">历史作业</string>
    <string name="item_6">维修点</string>
    <string name="item_7">加油站</string>
    <string name="item_9">个人信息</string>

    <string name="title_activity_register">register</string>
    <string name="title_activity_register__termsof_service">register_TermsofService</string>
    <string name="title_activity_get_password">get_password</string>
    <string name="title_activity_get_password2">get_password2</string>
    <string name="title_activity_mainpages">mainpages</string>
    <string name="title_activity_item_release_machine">item_release_machine</string>
    <string name="title_activity_1_intelligent_resolution">item_intelligent_resolution</string>
    <string name="title_activity_1_intelligent_resolution_1">item_intelligent_resolution_1</string>
    <string name="title_activity_1_intelligent_resolution_2">item_intelligent_resolution_2</string>
    <string name="title_activity_1_intelligent_resolution_3">item_intelligent_resolution_3</string>
    <string name="title_activity_item_query_requirement">item_query_requirement</string>
    <string name="title_activity_2_repair_station">item_repair_station</string>
    <string name="title_activity_5_personal_information">item_personalInformation</string>
    <string name="title_activity_register_image">register_image</string>
    <string name="title_activity_sldingmenu">sldingmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_slidingmenu">slidingmenu</string>
    <string name="title_activity_sliding_menu">slidingMenu</string>


    <!--导航*********************-->
    <string name="sdk_name">Baidu Navigation SDK Demo</string>
    <string-array name="sdkapi_items">
        <item>关键字搜索</item>
        <item>周边搜索</item>
        <item>手机语音识别</item>
        <item>外部语音流识别</item>
        <item>TTS</item>
        <item>反GEO</item>
        <item>线路规划demo1</item>
        <item>线路规划demo2</item>
        <item>离线数据管理</item>
        <item>自定义图层</item>
    </string-array>
    <string name="err_sfzh">请输入15-18位的身份证号！</string>
    <string name="err_sfzhe2">身份证号不能为空</string>
    <string name="err_sex">请输入性别</string>
    <string name="err_sex2">性别不能为空</string>
    <string name="search_start">搜索</string>
    <string name="search_tips">离线检索需要使用"导航离线数据下载"demo下载数据之后才能正常使用！检索范围固定为广东省-深圳市，其他城市请修改demo源代码。</string>
    <string name="antigeo_tips">离线反geo需要使用"导航离线数据下载"demo下载数据之后才能正常使用！</string>
    <string name="asr_tips">语音识别需要使用"导航离线数据下载"demo下载广东数据之后才能正常使用！其他城市请修改demo源代码。</string>
    <string name="suggest_start">提示</string>
    <string name="search_hint">请输入关键字</string>
    <string name="record_recording">\u2026正在录音\u2026</string>
    <string name="record_recognizing">\u2026正在识别\u2026</string>
    <string name="voiceinput">外部语音流识别</string>
    <string name="voicenormal">手机语音流识别</string>
    <string name="keyword_search">关键字搜索</string>
    <string name="space_search">周边搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_empty">识别结果为空</string>
    <string name="search_fail">识别无效</string>
    <string name="record_start">点击开启</string>

    <!-- 离线数据管理 -->
    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
    <string name="title_route_plan_demo">2. 路线规划(RoutePlanDemo)</string>
    <string name="title_cruiser">3. 电子狗(CruiserDemo)</string>
    <string name="title_layer">4. 自定义地图图层(MapLayerDemo)</string>
    <string name="title_offline_data">5. 导航离线数据下载(DownloadDemo)</string>
    <string name="title_keyword_search">6. POI搜索-关键字(KeySearchDemo)</string>
    <string name="title_nearby">7. POI搜索-分类(CatalogSearchDemo)</string>
    <string name="title_degeo">8. 反GEO(ReverseGeoDemo)</string>
    <string name="title_tts">9. TTS-Text To Speech(TTSDemo)</string>
    <string name="title_asr">10. 语音识别(VoiceDemo)</string>
    <string name="title_asr_input">11. 外部语音识别(VoiceInputDemo)</string>
    <string name="title_key_verify_demo">12. 密钥验证(KeyVerifyDemo)</string>
    <string name="title_charset_change_demo">13. 简体繁体转换(CharsetChangeDemo)</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>

    <!-- 繁体简体切换 -->
    <string name="change_to_simplified">地图切换为简体</string>
    <string name="change_to_traditional">地图切换为繁体</string>
    <string name="change_to_simplified_tips">已切换为简体，请在地图图层页看效果</string>
    <string name="change_to_traditional_tips">已切换为繁体，请在地图图层页看效果</string>

    <string name="nsdk_string_hw_go_ahead">前行</string>
    <string name="nsdk_string_hw_after">后</string>
    <string name="nsdk_string_hw_go_out_from_highway">出高速</string>
    <string name="nsdk_string_hw_from">从</string>
    <string name="nsdk_string_hw_go_to">去往</string>
    <string name="nsdk_string_hw_enter">进入</string>
    <string name="nsdk_string_hw_ic_code">%1$s出口</string>
    <string name="bnav_string_hw_direction">方向</string>
    <string name="bnav_string_hw_single_service_info">%1$s  %2$s</string>
    <!-- 如  20公里  白鸽服务区 -->
    <string name="bnav_string_hw_no_service_area">全程无服务区</string>
    <string name="bnav_string_hw_fullview">查看全程</string>

    <string name="nsdk_string_rg_along">沿</string>
    <string name="nsdk_string_rg_direct">顺行</string>
    <string name="nsdk_string_rg_come_in">进入</string>
    <string name="nsdk_string_rg_arrive_word">到达</string>
    <string name="nsdk_string_rg_driver">行驶</string>
    <string name="nsdk_string_rg_wee_hours">凌晨</string>
    <string name="nsdk_string_rg_tomorrow">明天</string>
    <string name="nsdk_string_rg_the_day_after_tomorrow">后天</string>
    <string name="nsdk_string_rg_arrive_time">%1$s到达</string>
    <string name="nsdk_string_rg_arrive_time_at_wee">凌晨%1$s到达</string>
    <string name="nsdk_string_rg_arrive_time_after_day">%1$s天后到达</string>

    <string name="nsdk_string_rg_sg_cur_road_word">当前道路</string>

    <string name="nsdk_string_navi_no_name_road">无名路</string>

    <string name="nsdk_string_rg_sg_after_meters"><Data><![CDATA[%1$s]]></Data></string>
    <string name="title_activity_open_baidu_map">OpenBaiduMap</string>
    <string name="title_activity_item_query_requirement_1">item_query_requirement_1</string>
    <string name="title_activity_item__intelligent_resolution_4">item_Intelligent_resolution_4
    </string>
    <string name="title_activity_item_personalinformation_fix_info">
        item_personalinformation_fix_info
    </string>
    <string name="title_activity_item_personalinformation_fix_site">
        item_personalinformation_fix_site
    </string>
        <string name="title_activity_item_personalinformation_fix_password">
        item_personalinformation_fix_password
    </string>

</resources>
